[metadata]
name = weighted_bingo
version = attr:python_starter.__VERSION__
description = Shuffle a bingo card so weights are approximately fair
long_description = file: README.md
keywords = starter, template, python
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
entry_points = weighted_bingo
packages = weighted_bingo